# EdgeAIApp

./: .gitattributes  .gitignore  .nojekyll  Gemfile  QUALCOMM_AIHUB_SETUP.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.3.0.md  _config.yml  index.html  index.md  settings.gradle.kts
.github/disabled-workflows/: jekyll-build-pages.yml
.github/workflows/: docs.yml  publish-package.yml
app/: build.gradle.kts
app/app/src/main/cpp/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: tokenizer.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/edgeai/: MainActivity.kt
app/src/main/java/com/example/edgeai/ml/: CLIPInference.kt  LLaMAInference.kt  TinyLLaMAInference.kt  VqaExecutor.kt
app/src/main/java/com/example/edgeai/ui/theme/: MainViewModel.kt
app/src/main/jniLibs/arm64-v8a/: genie-t2e-run  genie-t2t-run  qnn-context-binary-generator  qnn-net-run  qnn-platform-validator  qnn-profile-viewer  qnn-throughput-net-run  qtld-net-run  snpe-net-run  snpe-parallel-run  snpe-throughput-net-run
app/src/main/res/layout/: activity_main.xml
debugging/: debugging-report.md
docs/: GITHUB_PAGES_SETUP.md  Gemfile  README.md  _config.yml  docusaurus.config.ts  index.html  styles.css
docs/_includes/: footer.html  header.html
docs/_layouts/: default.html  documentation.html
docs/_sass/: style.scss
docs/assets/css/: main.css  style.scss  test.scss
docs/docs/releases/: release-notes-v1-4-0.md
docs/docs/technical/: project-structure.md
docs/releases/: RELEASE_NOTES_v1.4.0.md
docs/setup/: qualcomm-aihub-setup.md
docs/src/pages/: index.tsx
docs/technical/: IMPLEMENTATION_ANALYSIS.md  PROJECT_STRUCTURE.md  REAL_EXECUTORCH_QNN_INTEGRATION.md  project-structure.md
releases/: RELEASE_NOTES_v1.2.0.md
